--- a/requirements.txt
+++ b/requirements.txt
@@ -1,285 +1,91 @@
-absl-py==0.9.0
-alabaster==0.7.12
 altair==4.1.0
-anaconda-client==1.7.2
-anaconda-navigator==1.9.7
-anaconda-project==0.8.3
-appdirs==1.4.4
-appnope==0.1.0
-appscript==1.0.1
-asn1crypto==1.0.1
+appnope==0.1.2
+argon2-cffi==20.1.0
 astor==0.8.1
-astroid==2.3.1
-astropy==3.2.2
-astunparse==1.6.3
-atomicwrites==1.3.0
-attrs==19.2.0
-Babel==2.7.0
-backcall==0.1.0
-backports.functools-lru-cache==1.6.1
-backports.os==0.1.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-base58==2.0.1
-beautifulsoup4==4.8.0
-bitarray==1.0.1
-bkcharts==0.2
-bleach==3.1.0
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+base58==2.1.0
+bleach==4.0.0
 blinker==1.4
-bokeh==1.3.4
-boto==2.49.0
-boto3==1.16.7
-botocore==1.19.7
-Bottleneck==1.2.1
-cachetools==4.1.1
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-cloudpickle==1.2.2
-clyent==1.2.2
-colorama==0.4.1
-conda==4.8.4
-conda-build==3.18.9
-conda-package-handling==1.7.0
-conda-verify==3.4.2
-contextlib2==0.6.0
-corner==2.1.0
-cryptography==2.7
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+click==7.1.2
 cycler==0.10.0
-Cython==0.29.13
-cytoolz==0.10.0
-dask==2.5.2
-decorator==4.4.0
-defusedxml==0.6.0
-dill==0.3.2
-distlib==0.3.1
-distributed==2.5.2
-dm-sonnet==2.0.0
-dm-tree==0.1.5
-docutils==0.15.2
-emcee==3.0.2
+decorator==5.0.9
+defusedxml==0.7.1
 entrypoints==0.3
-enum-compat==0.0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-Flask==1.1.1
-fsspec==0.5.2
-future==0.18.2
-gast==0.3.3
-gevent==1.4.0
-gitdb==4.0.5
-GitPython==3.1.11
-glob2==0.7
-gmpy2==2.0.8
-google-auth==1.20.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-googleapis-common-protos==1.52.0
-graphs==0.1.3
-greenlet==0.4.15
-grpcio==1.31.0
-gym==0.18.0
--e git+https://github.com/danijar/dreamerv2.git@ec9904613cb70dded51017f724f05eb688c1bc3d#egg=gym_mnist&subdirectory=gym-mnist
-h5py==2.10.0
-HeapDict==1.0.1
-html5lib==1.0.1
-idna==2.8
-imageio==2.6.0
-imagesize==1.1.0
-importlib-metadata==0.23
-ipykernel==5.1.2
-ipython==7.8.0
+gitdb==4.0.7
+GitPython==3.1.18
+idna==3.2
+importlib-metadata==4.6.3
+ipykernel==5.5.5
+ipython==7.16.1
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.15.1
-Jinja2==2.10.3
-jmespath==0.10.0
-joblib==0.13.2
-json5==0.8.5
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.1
-jupyter-core==4.5.0
-jupyter-highlight-selected-word==0.2.0
-jupyter-latex-envs==1.4.6
-jupyter-nbextensions-configurator==0.4.1
-jupyterlab==1.1.4
-jupyterlab-server==1.0.6
-jupyterthemes==0.20.0
-Keras-Preprocessing==1.1.2
-keyring==18.0.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-lesscpy==0.14.0
-libarchive-c==2.8
-lief==0.9.0
-llvmlite==0.29.0
-locket==0.2.0
-lxml==4.4.1
-Markdown==3.2.2
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-mccabe==0.6.1
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.3.4
 mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.1.0
-mkl-service==2.3.0
-mock==3.0.5
-more-itertools==7.2.0
-mpmath==1.1.0
-msgpack==0.6.1
-multipledispatch==0.6.0
-navigator-updater==0.2.1
-nbconvert==5.6.0
-nbformat==4.4.0
-networkx==1.8.1
-nltk==3.4.5
-nose==1.3.7
-notebook==6.0.1
-numba==0.45.1
-numexpr==2.7.0
-numpy==1.17.2
-numpydoc==0.9.1
-oauthlib==3.1.0
-olefile==0.46
-openpyxl==3.0.0
-opt-einsum==3.3.0
-packaging==19.2
-pandas==0.25.1
-pandocfilters==1.4.2
-parso==0.5.1
-partd==1.0.0
-path.py==12.0.1
-pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.7.0
+mpmath==1.2.1
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
+numpy==1.19.5
+packaging==21.0
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.2
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==6.2.0
-pkginfo==1.5.0.1
-pluggy==0.13.0
-ply==3.11
-prometheus-client==0.7.1
-promise==2.3
-prompt-toolkit==2.0.10
-protobuf==3.13.0
-psutil==5.6.3
-ptyprocess==0.6.0
-py==1.8.0
-pyarrow==2.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-pycrypto==2.6.1
-pycurl==7.43.0.3
-pydeck==0.5.0
-pydemic==2020.2.1
-pyflakes==2.1.1
-pyglet==1.5.0
-Pygments==2.4.2
-pylint==2.4.2
-pyodbc==4.0.27
-pyOpenSSL==19.0.0
-pyparsing==2.4.2
-pyrsistent==0.15.4
-PySocks==1.7.1
-pytest==5.2.1
-pytest-arraydiff==0.3
-pytest-astropy==0.5.0
-pytest-doctestplus==0.4.0
-pytest-openfiles==0.4.0
-pytest-remotedata==0.3.2
-python-dateutil==2.8.0
-pytz==2019.3
-PyWavelets==1.0.3
-PyYAML==5.1.2
-pyzmq==18.1.0
-QtAwesome==0.6.0
-qtconsole==4.5.5
-QtPy==1.9.0
-requests==2.22.0
-requests-oauthlib==1.3.0
-rope==0.14.0
-rsa==4.6
-ruamel-yaml==0.15.46
-s3transfer==0.3.3
-scikit-image==0.15.0
-scikit-learn==0.24.2
-scipy==1.4.1
-seaborn==0.9.0
-semantic-version==2.8.5
-Send2Trash==1.5.0
-setuptools-scm==4.1.2
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.12.0
-sklearn==0.0
-smmap==3.0.4
-snowballstemmer==2.0.0
-sortedcollections==1.1.2
-sortedcontainers==2.1.0
-soupsieve==1.9.3
-Sphinx==2.2.0
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-sphinxcontrib-websupport==1.1.2
-spyder==3.3.6
-spyder-kernels==0.5.2
-SQLAlchemy==1.3.9
-statsmodels==0.10.1
-streamlit==0.70.0
-sympy==1.4
-tables==3.5.2
-tabulate==0.8.7
-tblib==1.4.0
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.0
-tensorflow-datasets==3.2.1
-tensorflow-estimator==2.3.0
-tensorflow-metadata==0.23.0
-tensorflow-probability==0.5.0
-termcolor==1.1.0
-terminado==0.8.2
-testpath==0.4.2
-threadpoolctl==2.2.0
-toml==0.10.1
-toolz==0.10.0
-tornado==6.0.3
-tqdm==4.36.1
+Pillow==8.3.1
+plotly==5.1.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+ptyprocess==0.7.0
+pyarrow==5.0.0
+pycparser==2.20
+pydeck==0.6.2
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.1
+pyzmq==22.2.0
+requests==2.26.0
+scipy==1.5.4
+seaborn==0.11.1
+Send2Trash==1.7.1
+six==1.16.0
+smmap==4.0.0
+streamlit==0.85.1
+sympy==1.8
+tabulate==0.8.9
+tenacity==8.0.1
+terminado==0.10.1
+testpath==0.5.0
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+tqdm==4.62.0
 traitlets==4.3.3
+typing-extensions==3.10.0.0
 tzlocal==2.1
-unicodecsv==0.14.1
-urllib3==1.25.11
-validators==0.18.1
-virtualenv==20.0.31
-watchdog==0.10.3
-wcwidth==0.1.7
+urllib3==1.26.6
+validators==0.18.2
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==0.16.0
-wget==3.2
 widgetsnbextension==3.5.1
-wrapt==1.12.1
-wurlitzer==1.0.3
-xlrd==1.2.0
-XlsxWriter==1.2.1
-xlwings==0.15.10
-xlwt==1.3.0
-zict==1.0.0
-zipp==0.6.0
+zipp==3.5.0
